# tensor-grep

./: .gitattributes  .gitignore  .gitmodules  .tg-registration.json  .tg-registration.toml  404.html  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile.gpu  ENTERPRISE_PLAN.md  GEMINI.md  LICENSE  NOTICE  PROJECT_PLAN.md  README.md  SECURITY.md  SKILL.md  V1_RELEASE_PLAN.md  build_binaries.py  compare_gpu_003.py  dummy.py  fix_main_final.py  generate_test_files.py  index.html  mkdocs.yml  patch_gpu_fallback.py  pyproject.toml  run_ast_benchmarks.py  run_benchmarks.py  simulate_oom_ctypes.py  simulate_oom_val_gpu_021.py  test.rs  test_val_gpu_001.py  test_val_gpu_025.py  test_val_gpu_026.py
.claude/: skill_rules.json
.factory/: init.sh  services.yaml
.factory/research/: gpu-text-search.md  simd-text-search.md
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  docs.yml  feature_request.yml  question.yml
.github/workflows/: audit.yml  benchmark.yml  ci.yml  dependabot-automation.yml  issue-triage.yml  public-gpu-proof.yml  release.yml
.hypothesis/constants/: 0321b4d9a56ecd5d  08b4847abc9ccb4c  09619f2e7b2664f4  097541b56a59acb5  1987ea0e0b593c3b  244a932d4f46a9e8  259b95774007f88d  26f238250b8499f1  2d172376ce08cd3e  54e4b49940b89cd5  5a48abcf717d7583  67abd2ccbf381759  6b442457f5745159  6dfa700ee8bb8fa5  72f590d9256fc7a6  740a6fb9febec20c  74ea32f85ecfd56c  a3fd68449bfef454  ab596ae2844fd274  ac1d131da99aea9b  b0f490b7b2d6bf29  c30bf139df59b92f  c63b8b09cb09eb60  cabbe58a6de53f9b  cba1b20bea830cc3  d7e5661845384844  da39a3ee5e6b4b0d  dff29feff30d7749  e2c8c4005a3c9dad  f06fa362a827014e  f167f3c3dea5b11a  f46aa3ceacc645fd  f5078de4866a65c6  f9ba50acb0fd2077
.hypothesis/patches/: 2026-02-24--4ebab487.patch
PAPER/: index.html
RELEASE_CHECKLIST/: index.html
_archive/: find_offsets.py  master_assemble.py  patch_main_initializers.py
architecture/: index.html
artifacts/: bench_run_ast_workflow_benchmarks.json  bench_run_benchmarks.json  bench_run_benchmarks_positional_glob_baseline_lane.json  bench_run_benchmarks_positional_glob_candidate.json  bench_run_benchmarks_positional_m_baseline_lane.json  bench_run_benchmarks_positional_m_candidate.json  bench_run_rg_parity_benchmarks.json  pytest_full_positional_glob_rejection_report.json
benchmarks/: analyze_bakeoff_misses.py  analyze_external_profiling.py  attempt_ledger_helpers.py  baseline_m1.json  build_attempt_ledger.py  build_external_agent_patch_driver_comparison.py  build_external_agent_patch_driver_scorecard.py  check_regression.py  check_rust_cold_start.py  editor_plane_benchmark_utils.py  eval_bm25_quality.py  eval_dense_compression_quality.py  eval_late_rerank_quality.py  gen_corpus.py  index.html  native_cpu_benchmark_utils.py  normalize_competitor_eval.py  patch_runner_common.py  render_claude_skill_ab_matrix.py  render_comparison_scorecard.py  render_patch_scorecard.py  render_provider_navigation_scorecard.py  render_world_class_report.py  run_agent_success_harness.py  run_agent_workflow_benchmarks.py  run_ast_benchmarks.py  run_ast_multilang_benchmarks.py  run_ast_parity_check.py  run_ast_rewrite_benchmarks.py  run_ast_workflow_benchmarks.py  run_bakeoff.py  run_benchmarks.py  run_blast_radius_benchmarks.py  run_claude_competitor_eval.py  run_claude_patch_predictions.py  run_claude_skill_ab.py  run_claude_skill_ab_matrix.py  run_codex_competitor_eval.py  run_cold_path_attribution.py  run_compat_checks.py  (+24 more)
benchmarks_ast/: index.html
docs/: BACKLOG.md  CI_PIPELINE.md  CONTINUATION_PLAN.md  CONTRACTS.md  DOGFOOD_1_13_14_ISSUES.md  EXPERIMENTAL.md  FIX_PLAN_1_13_12.md  FIX_PLAN_1_13_15.md  FIX_PLAN_1_13_16.md  FIX_PLAN_1_13_17.md  FIX_PLAN_1_13_21.md  HOTFIX_PROCEDURE.md  PAPER.md  RELEASE_CHECKLIST.md  SESSION_HANDOFF.md  SUPPORT_MATRIX.md  amd_laptop_validation_plan.md  architecture.md  benchmarks.md  benchmarks_ast.md  enterprise_review_bundle_ci.md  gpu_crossover.md  harness_api.md  harness_cookbook.md  index.md  installation.md  milestone1_audit.md  multi_agent_context_plane.md  package_manager_publish.md  routing_policy.md  tool_comparison.md  world_class_plan.md
installation/: index.html
npm/: install.js  package-lock.json  package.json
rust_core/: Cargo.toml  README.md  deny.toml  rust-toolchain.toml
rust_core/src/: backend_ast.rs  backend_ast_workflow.rs  backend_cpu.rs  backend_gpu.rs  cli.rs  crossover.rs  editor_plane.rs  gpu_native.rs  index.rs  index_lock.rs  lib.rs  main.rs  mmap_arrow.rs  native_search.rs  python_sidecar.rs  rg_passthrough.rs  routing.rs  runtime_paths.rs  scanner.rs
rust_core/tests/: test_ast_backend.rs  test_ast_cache.rs  test_ast_grep_embed.rs  test_ast_rewrite.rs  test_audit_manifest_symlink_unix.rs  test_gpu_native.rs  test_gpu_native_error_handling.rs  test_gpu_native_graphs.rs  test_gpu_native_integration.rs  test_gpu_native_long_lines.rs  test_gpu_native_streams.rs  test_index.rs  test_index_lock_concurrency.rs  test_mmap_arrow.rs  test_native_search.rs  test_output.rs  test_public_native_cli_parity.rs  test_python_bootstrap.rs  test_release_profile.rs  test_replace.rs  test_resident_worker.rs  test_routing.rs  test_runtime_path_resolution.rs  test_schema_compat.rs  test_search.rs  test_search_golden.rs  test_sidecar_ipc.rs  test_smart_routing.rs
scripts/: agent_readiness.py  build_binaries.py  check_repo_hygiene.py  generate_parity_corpus.py  install.ps1  install.sh  oimiragieo.tensor-grep.yaml  parity_check.py  prepare_package_manager_release.py  run_pytest_stable.py  smoke_test_package_manager_bundle.py  smoke_test_pypi_artifacts.py  smoke_verify_release_binary.py  stage_windows_ci_launchers.ps1  stamp_release_assets.py  stress_test_gauntlet.py  tensor-grep.rb  triage_issue.py  uv_checksums.json  validate_pr_title_semver.py  validate_pypi_artifacts.py  validate_release_assets.py  validate_release_binary_artifacts.py  validate_release_version_parity.py  verify_github_release_assets.py  verify_gpu.py  verify_package_manager_bundle_checksums.py
search/: search_index.json
tests/: conftest.py
(+1045 files in other folders)
