[build-system]
requires = ["maturin>=1.5,<2.0"]
build-backend = "maturin"

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "src"
module-name = "tensor_grep.rust_core"
manifest-path = "rust_core/Cargo.toml"

[project]
name = "tensor-grep"
version = "0.32.0"
description = "High-performance grep-compatible CLI with Rust, GPU, and AST/NLP routing"
readme = { file = "rust_core/README.md", content-type = "text/markdown" }
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12",
    "rich>=13.0",
    "mcp>=1.2.0",
    "pyyaml>=6.0",
    "pyarrow>=14.0.0",
    "opentelemetry-api>=1.27.0",
    "opentelemetry-sdk>=1.27.0",
    "opentelemetry-exporter-otlp>=1.27.0",
    "importlib-metadata<8.5.0; python_version < '3.12'",
]

[project.optional-dependencies]
gpu = ["cudf-cu12", "kvikio-cu12", "torch>=2.0", "torch_geometric>=2.5.0"]
gpu-win = ["torch>=2.0", "torch_geometric>=2.5.0"]
nlp = ["transformers>=4.40", "tritonclient[http]"]
ast = ["tree-sitter>=0.22", "tree-sitter-python", "tree-sitter-javascript", "pygls>=1.3.0"]
dev = [
  "pytest>=8.0", "pytest-cov>=5.0", "pytest-mock>=3.14",
  "pytest-asyncio>=0.24", "pytest-snapshot>=0.9",
  "hypothesis>=6.100", "mutmut>=3.0",
  "ruff>=0.6", "mypy>=1.11",
  "numpy>=1.26.0",
  "stringzilla>=4.0",
  "psutil",
  "types-PyYAML",
]
bench = [
  "pytest>=8.0",
  "tree-sitter>=0.22",
  "tree-sitter-python",
  "tree-sitter-javascript",
  "torch>=2.0",
  "nvtx>=0.2",
]

[project.scripts]
tg = "tensor_grep.cli.bootstrap:main_entry"

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
  "gpu: requires NVIDIA CUDA GPU",
  "slow: takes >10 seconds",
  "integration: requires real GPU + cuDF",
  "acceptance: outer-loop E2E tests",
  "property: hypothesis property-based tests",
  "characterization: ripgrep parity tests",
  "snapshot: output format regression tests",
  "performance: performance benchmarks",
]
addopts = [
  "--import-mode=importlib",
  "--strict-markers",
  "-x",
  "--tb=short",
]

[tool.coverage.run]
source = ["src/tensor_grep"]
branch = true

[tool.coverage.report]
fail_under = 60

[tool.mutmut]
paths_to_mutate = "src/tensor_grep/"
tests_dir = "tests/unit/"
runner = "python -m pytest tests/unit/ -x --no-header -q"

[tool.ruff]
target-version = "py311"
line-length = 100
extend-exclude = [
    "bench_data",
    "bench_ast_data",
    "gpu_bench_data",
    "benchmarks/bench_data",
    "benchmarks/bench_ast_data",
    "benchmarks/gpu_bench_data",
]

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
    "RUF" # Ruff-specific rules
]
ignore = [
    "E501", # line too long, handled by black
    "B008", # Do not perform function call in argument defaults (normal for Typer CLI commands)
]

[tool.ruff.lint.isort]
known-first-party = ["tensor_grep"]

[tool.mypy]
warn_unused_ignores = false
python_version = "3.11"
strict = true
ignore_missing_imports = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.semantic_release]
version_toml = [
    "pyproject.toml:project.version",
    "rust_core/Cargo.toml:package.version",
]
branch = "main"
build_command = "python scripts/stamp_release_assets.py && curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | sh -s -- -y --profile minimal && . $HOME/.cargo/env && rustup default stable && pip install uv && uv build"
upload_to_pypi = false
upload_to_release = true
commit_message = "chore(release): v{version} [skip ci]"
version_variables = [
    "src/tensor_grep/cli/main.py:pkg_version",
    "npm/package.json:version",
    "scripts/tensor-grep.rb:TENSOR_GREP_VERSION",
    "scripts/oimiragieo.tensor-grep.yaml:PackageVersion",
    "scripts/oimiragieo.tensor-grep.yaml:InstallerUrl",
]
