[package]
name = "tensor_grep_rs"
version = "0.1.0"
edition = "2024"

[lib]
name = "tensor_grep_rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.5.60", features = ["derive"] }
memmap2 = "0.9.10"
rayon = "1.11.0"
regex = "1.12.3"
tree-sitter = "0.26.6"
tree-sitter-python = "0.25.0"
walkdir = "2.5.0"
pyo3 = { version = "0.24.1", features = ["anyhow"] }
memchr = "2.7.1"
arrow = "54.0.0"
arrow-array = "54.0.0"
arrow-buffer = "54.0.0"
arrow-schema = "54.0.0"
pyo3-arrow = "0.9.0"

[features]
default = ["extension-module"]
extension-module = ["pyo3/extension-module"]
