[package]
name = "tensor_grep_rs"
version = "0.18.0"
edition = "2021"
description = "Rust core engine for tensor-grep"
license = "MIT"
repository = "https://github.com/oimiragieo/tensor-grep"
readme = "README.md"

[lib]
name = "tensor_grep_rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.5.60", features = ["derive"] }
memmap2 = "0.9.10"
rayon = "1.11.0"
regex = "1.12.3"
tree-sitter = "0.26.6"
tree-sitter-python = "0.25.0"
walkdir = "2.5.0"
pyo3 = { version = "0.22", features = ["anyhow", "auto-initialize", "abi3-py311"] }
memchr = "2.7.1"
arrow = "53.4.1"
arrow-array = "53.4.1"
arrow-buffer = "53.4.1"
arrow-schema = "53.4.1"
pyo3-arrow = "0.5.0"
ignore = "0.4.25"

[[bin]]
name = "tg"
path = "src/main.rs"

[dev-dependencies]
tempfile = "3.26.0"
