[package]
name = "tensor_grep_rs"
version = "0.35.1"
edition = "2021"
description = "Rust core engine for tensor-grep"
license = "MIT"
repository = "https://github.com/oimiragieo/tensor-grep"
readme = "README.md"

[lib]
name = "tensor_grep_rs"
crate-type = ["cdylib", "rlib"]

[features]
default = []
cuda = ["dep:cudarc"]

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.5.60", features = ["derive"] }
hmac = "0.12.1"
memmap2 = "0.9.10"
rayon = "1.11.0"
regex = "1.12.3"
regex-syntax = "0.8.10"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sha2 = "0.10.9"
ast-grep-core = "0.41.1"
ast-grep-language = { version = "0.41.1", default-features = false, features = ["tree-sitter-python", "tree-sitter-javascript", "tree-sitter-typescript", "tree-sitter-rust"] }
tree-sitter = "0.26.6"
tree-sitter-python = "0.25.0"
walkdir = "2.5.0"
pyo3 = { version = "0.24.1", features = ["anyhow", "abi3-py311"] }
memchr = "2.7.1"
arrow = "55.0.0"
arrow-array = "55.0.0"
arrow-buffer = "55.0.0"
arrow-schema = "55.0.0"
pyo3-arrow = "0.9.0"
ignore = "0.4.25"
grep-cli = "0.1.12"
grep-matcher = "0.1.8"
grep-printer = { version = "0.3.1", features = ["serde"] }
grep-regex = "0.1.14"
grep-searcher = "0.1.16"
cudarc = { version = "0.19.3", optional = true, features = ["cuda-13010"] }

[[bin]]
name = "tg"
path = "src/main.rs"

[[bin]]
name = "tg-search-fast"
path = "src/bin/tg_search_fast.rs"

[dev-dependencies]
tempfile = "3.26.0"

[profile.release]
lto = true
